kubes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aspnet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aspnet
  template:
    metadata:
      labels:
        app: aspnet
    spec:
      containers:
      - env:
        image: gcr.io/lloyd-test/aspnet:e5b57451d65ed240b23aa295f1cff924eaf56d2e
        name: aspnet
        ports:
        - name: payments-port
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /home/about
            port: payments-port
            httpHeaders:
              - name: X-Requested-With
                value: ReadinessProbe
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 1
          successThreshold: 1
status: {}
